# MedicareCallForge

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  PILOT_WIRING_GUIDE.md  README.md  pyproject.toml  railway.toml  verify_both_streams.ps1
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
architecture/: ARCHITECTURE.md
docs/: AGENT_ORCHESTRATED_BUILD_PLAN.md  CLIENT_LIVE_TEST_QUICK_REFERENCE.md  CONSOLIDATION_STRATEGY.md  LIVE_TEST_CALLER_SCRIPT.md  LIVE_TEST_PHASE_OPS_DASHBOARD_TRAINING_GUIDE.md  LIVE_TEST_RUN_RUNBOOK.md  MARKET_PILOT_CHECKLIST.md  PILOT_LAUNCH_READINESS_CHECKLIST.md  PILOT_READY_STATUS.md  PILOT_WIRING_GUIDE.md  ROADMAP.md  TWILIO_CONSOLE_CHECKLIST.md
examples/: full_flow_simulator.py
plan/: BUILD_PLAN.md
redteam/: RED_TEAM_REPORT.md
scripts/: post_deploy_smoke_test.py  run_feeder.py  verify_economics.py  verify_live_brain_telephony.py  verify_military_e2e.py
src/medicare_call_forge/: __init__.py  app.py  dashboard.py  observability.py  router_integration.py
src/medicare_call_forge/compliance/: gate.py
src/medicare_call_forge/economics/: __init__.py  dual_stream_pnl.py
src/medicare_call_forge/ghl/: client.py
src/medicare_call_forge/mcp/: __init__.py  ghl_tools.py  server.py
src/medicare_call_forge/orchestration/: build_plan.py
src/medicare_call_forge/scoring/: uval_scorer.py
src/medicare_call_forge/telephony/: __init__.py  inbound_handler.py
tests/: test_compliance_gate.py  test_economics_engine.py  test_telephony_handler.py
